--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <header>
         <div class="container">
             <div class="logo">
-                <img src="img/quick.png" alt="quick">
+                <img src="quick.png" alt="quick">
             </div>
             <nav class="menu">
                 <ul>
